# take

./: .doxygen  AUTHORS  COPYING  ChangeLog  README.md  configure.ac  do-build  do-install
man/: Makefile.am  take.1  take.1.txt
sbin/: do-build
src/: Makefile.am  common.c  common.h  global.c  global.h  ll.c  ll.h  mc.h  mcc.h  mcp.c  mcp.h  mcs.h  prompt.c  prompt.h  screen.c  screen.h  take.c
